--- a/ex4 - Shahar Asher - 209305408.ipynb
+++ b/ex4 - Shahar Asher - 209305408.ipynb
@@ -28,12 +28,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [],
    "source": [
     "# imports\n",
-    "from typing import Final"
+    "# %pip install numba\n",
+    "# %pip install numba pillow\n",
+    "from typing import Final\n",
+    "import numpy as np\n",
+    "from numba import njit\n",
+    "from PIL import Image"
    ]
   },
   {
@@ -45,24 +50,59 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [],
    "source": [
     "# canvas\n",
     "H:Final[int] = 1080\n",
     "W:Final[int] = 1920\n",
-    "BGCOLOR:Final[tuple[float,float,float]] = (0.4, 0.4, 0.4)\n",
+    "X, Y = np.meshgrid(np.arange(W), np.arange(H))\n",
+    "BGCOLOR:np.array = np.array([0.4, 0.4, 0.4])\n",
     "\n",
     "# circle\n",
-    "CIRCLE_CENTER:Final[tuple[int,int]] = (600, 400)\n",
+    "CIRCLE_CENTER:np.array = np.array([600, 400])\n",
     "CIRCLE_RADIUS:Final[int] = 350\n",
-    "CIRCLE_COLOR:Final[tuple[float,float,float]] = (0.8, 0.3, 0.1)\n",
+    "CIRCLE_COLOR:np.array = np.array([0.8, 0.3, 0.1])\n",
     "\n",
     "# rectangle\n",
-    "RECTANGLE_COL:Final[tuple[int,int]] = (800, 1600)\n",
-    "RECTANGLE_ROW:Final[tuple[int,int]] = (450, 920)\n",
-    "RECTANGLE_COLOR:Final[tuple[float,float,float]] = (0.5, 0.3, 0.2)"
+    "RECTANGLE_COL:np.array = np.array([800, 1600])\n",
+    "RECTANGLE_ROW:np.array = np.array([450, 920])\n",
+    "RECTANGLE_COLOR:np.array = np.array([0.5, 0.3, 0.2])\n",
+    "\n",
+    "IMAGE:np.array = np.ones((H, W, 3)) * BGCOLOR"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 62,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Define a numba-jitted function to draw the circle and rectangle\n",
+    "def draw_shapes(image, X, Y):\n",
+    "    # drow the circle\n",
+    "    circle_mask = (X - CIRCLE_CENTER[0])**2 + (Y - CIRCLE_CENTER[1])**2 <= CIRCLE_RADIUS**2\n",
+    "    image[circle_mask] = CIRCLE_COLOR\n",
+    "    \n",
+    "    # draw the rectangle\n",
+    "    rectangle_mask = (RECTANGLE_COL[0] <= X) & (X < RECTANGLE_COL[1]) & (RECTANGLE_ROW[0] <= Y) & (Y < RECTANGLE_ROW[1])\n",
+    "    image[rectangle_mask] = RECTANGLE_COLOR\n",
+    "\n",
+    "    return image"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 63,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Draw the shapes on the image\n",
+    "IMAGE = draw_shapes(IMAGE, X, Y)\n",
+    "\n",
+    "# Convert the image to an 8-bit RGB image and save it\n",
+    "Image.fromarray((IMAGE * 255).astype(np.uint8)).show()"
    ]
   },
   {
