--- a/ex4 - Shahar Asher - 209305408.ipynb
+++ b/ex4 - Shahar Asher - 209305408.ipynb
@@ -17,27 +17,26 @@
     "- Name: Shahar Asher\n",
     "- Id: 209305408\n",
     "- Email adress: shaharas@edu.hac.ac.il\n",
-    "- Date: 19/04/2024\n",
+    "- Date: 12/05/2024\n",
     "\n",
     "### Operation system: Windows 11\n",
     "### Python version: 3.11.5 (Using anaconda)\n",
     "### IDE: Visual Studio Code\n",
-    "### libraries: numpy, pandas, dataclasses, re, inspect\n",
+    "### libraries: typing, numpy, pillow (PIL)\n",
     "---"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
     "# imports\n",
-    "# %pip install numba\n",
+    "\n",
     "# %pip install numba pillow\n",
     "from typing import Final\n",
     "import numpy as np\n",
-    "from numba import njit\n",
     "from PIL import Image"
    ]
   },
@@ -50,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -75,11 +74,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Define a numba-jitted function to draw the circle and rectangle\n",
     "def draw_shapes(image, X, Y):\n",
     "    # drow the circle\n",
     "    circle_mask = (X - CIRCLE_CENTER[0])**2 + (Y - CIRCLE_CENTER[1])**2 <= CIRCLE_RADIUS**2\n",
@@ -94,15 +92,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Draw the shapes on the image\n",
     "IMAGE = draw_shapes(IMAGE, X, Y)\n",
     "\n",
-    "# Convert the image to an 8-bit RGB image and save it\n",
-    "Image.fromarray((IMAGE * 255).astype(np.uint8)).show()"
+    "# Display the image\n",
+    "Image.fromarray((IMAGE * 255).astype(np.uint8)).show()\n",
+    "\n",
+    "# Save the image\n",
+    "Image.fromarray((IMAGE * 255).astype(np.uint8)).save(\"Image.png\")"
    ]
   },
   {
@@ -115,40 +115,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
    "source": [
-    "---\n",
-    "# Q.3\n"
+    "BGSIZE:Final[tuple[int, int]] = (200, 200)\n",
+    "BGCOLOR:Final[str] = \"red\"\n",
+    "SQUARECOLOR:Final[str] = \"white\"\n",
+    "SQUARESIZE:Final[tuple[int, int]] = (100, 100)\n",
+    "\n",
+    "img:Image = Image.new(\"RGB\", BGSIZE, BGCOLOR)\n",
+    "square:Image = Image.new(\"RGB\", SQUARESIZE, SQUARECOLOR)\n",
+    "square:Image = square.rotate(45, fillcolor=BGCOLOR ,expand=True)\n",
+    "\n",
+    "position = ((BGSIZE[0] - square.width) // 2, (BGSIZE[1] - square.height) // 2)\n",
+    "\n",
+    "img.paste(square, position)\n",
+    "img.show()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "---\n",
-    "# Q.4\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "markdown",
