README and documintation

--- a/ex4 - Shahar Asher - 209305408.ipynb
+++ b/ex4 - Shahar Asher - 209305408.ipynb
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -44,41 +44,60 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Q.1\n"
+    "# Q.1\n",
+    "\n",
+    "The solution to Q.1 involves drawing a circle and a rectangle on a canvas and displaying the resulting image. Here's a brief overview of the solution:\n",
+    "\n",
+    "- Constants are defined for the canvas size, colors, circle parameters, rectangle parameters, and the initial canvas image.\n",
+    "- A function `draw_shapes` is defined to draw the circle and rectangle on the canvas image.\n",
+    "- The `draw_shapes` function is called to draw the shapes on the canvas.\n",
+    "- The resulting image is displayed and saved."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
     "# canvas\n",
-    "H:Final[int] = 1080\n",
-    "W:Final[int] = 1920\n",
+    "H:Final[int] = 1080 # Height of the canvas\n",
+    "W:Final[int] = 1920 # Width of the canvas\n",
     "X, Y = np.meshgrid(np.arange(W), np.arange(H))\n",
-    "BGCOLOR:np.array = np.array([0.4, 0.4, 0.4])\n",
+    "BGCOLOR:Final[np.array] = np.array([0.4, 0.4, 0.4]) # Background color in RGB format\n",
     "\n",
     "# circle\n",
-    "CIRCLE_CENTER:np.array = np.array([600, 400])\n",
-    "CIRCLE_RADIUS:Final[int] = 350\n",
-    "CIRCLE_COLOR:np.array = np.array([0.8, 0.3, 0.1])\n",
+    "CIRCLE_CENTER:Final[np.array] = np.array([600, 400]) \n",
+    "CIRCLE_RADIUS:Final[int] = 350 \n",
+    "CIRCLE_COLOR:Final[np.array] = np.array([0.8, 0.3, 0.1]) # Color of the circle in RGB format\n",
     "\n",
     "# rectangle\n",
-    "RECTANGLE_COL:np.array = np.array([800, 1600])\n",
-    "RECTANGLE_ROW:np.array = np.array([450, 920])\n",
-    "RECTANGLE_COLOR:np.array = np.array([0.5, 0.3, 0.2])\n",
+    "RECTANGLE_COL:Final[np.array] = np.array([800, 1600])\n",
+    "RECTANGLE_ROW:Final[np.array] = np.array([450, 920])\n",
+    "RECTANGLE_COLOR:Final[np.array] = np.array([0.5, 0.3, 0.2]) # Color of the rectangle in RGB format\n",
     "\n",
-    "IMAGE:np.array = np.ones((H, W, 3)) * BGCOLOR"
+    "# Create canvas\n",
+    "IMAGE:Final[np.array] = np.ones((H, W, 3)) * BGCOLOR"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
     "def draw_shapes(image, X, Y):\n",
+    "    \"\"\"\n",
+    "    Draws a circle and a rectangle on the given image.\n",
+    "\n",
+    "    Args:\n",
+    "        image (numpy.ndarray): The image to draw on.\n",
+    "        X (numpy.ndarray): X-coordinate grid.\n",
+    "        Y (numpy.ndarray): Y-coordinate grid.\n",
+    "\n",
+    "    Returns:\n",
+    "        numpy.ndarray: Image with shapes drawn.\n",
+    "    \"\"\"\n",
     "    # drow the circle\n",
     "    circle_mask = (X - CIRCLE_CENTER[0])**2 + (Y - CIRCLE_CENTER[1])**2 <= CIRCLE_RADIUS**2\n",
     "    image[circle_mask] = CIRCLE_COLOR\n",
@@ -92,7 +111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -110,28 +129,60 @@
    "metadata": {},
    "source": [
     "---\n",
-    "# Q.2\n"
+    "# Q.2\n",
+    "\n",
+    "The solution to Q.2 involves creating and displaying an image with a square on a colored background. Here's a brief overview of the solution:\n",
+    "\n",
+    "- Constants are defined for the background size, background color, square color, and square size.\n",
+    "- A function `create_image` is defined to create and display the image with the square on the background.\n",
+    "- The `create_image` function is called to generate and display the image.\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
-    "BGSIZE:Final[tuple[int, int]] = (200, 200)\n",
-    "BGCOLOR:Final[str] = \"red\"\n",
-    "SQUARECOLOR:Final[str] = \"white\"\n",
-    "SQUARESIZE:Final[tuple[int, int]] = (100, 100)\n",
+    "BGSIZE:Final[tuple[int, int]] = (200, 200) # Size of the background image\n",
+    "BGCOLOR:Final[str] = \"red\" # Color of the background in RGB format\n",
+    "SQUARECOLOR:Final[str] = \"white\" # Color of the square in RGB format\n",
+    "SQUARESIZE:Final[tuple[int, int]] = (100, 100) # Size of the square"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def create_image()->Image:\n",
+    "    \"\"\"\n",
+    "    Creates and displays the image with a square on a colored background.\n",
     "\n",
-    "img:Image = Image.new(\"RGB\", BGSIZE, BGCOLOR)\n",
-    "square:Image = Image.new(\"RGB\", SQUARESIZE, SQUARECOLOR)\n",
-    "square:Image = square.rotate(45, fillcolor=BGCOLOR ,expand=True)\n",
-    "\n",
-    "position = ((BGSIZE[0] - square.width) // 2, (BGSIZE[1] - square.height) // 2)\n",
-    "\n",
-    "img.paste(square, position)\n",
-    "img.show()"
+    "    Returns:\n",
+    "        Image: The generated image.\n",
+    "    \"\"\"\n",
+    "    # Create the background image\n",
+    "    img:Image = Image.new(\"RGB\", BGSIZE, BGCOLOR)\n",
+    "    # Create the square image\n",
+    "    square:Image = Image.new(\"RGB\", SQUARESIZE, SQUARECOLOR)\n",
+    "    # Rotate the square by 45 degrees\n",
+    "    square:Image = square.rotate(45, fillcolor=BGCOLOR ,expand=True)\n",
+    "    # Calculate the position to paste the square onto the background\n",
+    "    position = ((BGSIZE[0] - square.width) // 2, (BGSIZE[1] - square.height) // 2)\n",
+    "    # Paste the square onto the background image\n",
+    "    img.paste(square, position)\n",
+    "    img.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "create_image()"
    ]
   },
   {
