Add type anotation

--- a/ex4 - Shahar Asher - 209305408.ipynb
+++ b/ex4 - Shahar Asher - 209305408.ipynb
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -56,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -82,28 +82,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def draw_shapes(image, X, Y):\n",
+    "def draw_shapes(image:np.array, X:np.array, Y:np.array) -> np.array:\n",
     "    \"\"\"\n",
     "    Draws a circle and a rectangle on the given image.\n",
     "\n",
     "    Args:\n",
-    "        image (numpy.ndarray): The image to draw on.\n",
-    "        X (numpy.ndarray): X-coordinate grid.\n",
-    "        Y (numpy.ndarray): Y-coordinate grid.\n",
+    "        image (numpy.narray): The image to draw on.\n",
+    "        X (numpy.narray): X-coordinate grid.\n",
+    "        Y (numpy.narray): Y-coordinate grid.\n",
     "\n",
     "    Returns:\n",
-    "        numpy.ndarray: Image with shapes drawn.\n",
+    "        numpy.narray: Image with shapes drawn.\n",
     "    \"\"\"\n",
     "    # drow the circle\n",
-    "    circle_mask = (X - CIRCLE_CENTER[0])**2 + (Y - CIRCLE_CENTER[1])**2 <= CIRCLE_RADIUS**2\n",
+    "    circle_mask:int = (X - CIRCLE_CENTER[0])**2 + (Y - CIRCLE_CENTER[1])**2 <= CIRCLE_RADIUS**2\n",
     "    image[circle_mask] = CIRCLE_COLOR\n",
     "    \n",
     "    # draw the rectangle\n",
-    "    rectangle_mask = (RECTANGLE_COL[0] <= X) & (X < RECTANGLE_COL[1]) & (RECTANGLE_ROW[0] <= Y) & (Y < RECTANGLE_ROW[1])\n",
+    "    rectangle_mask:int = (RECTANGLE_COL[0] <= X) & (X < RECTANGLE_COL[1]) & (RECTANGLE_ROW[0] <= Y) & (Y < RECTANGLE_ROW[1])\n",
     "    image[rectangle_mask] = RECTANGLE_COLOR\n",
     "\n",
     "    return image"
@@ -111,7 +111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -140,7 +140,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -152,11 +152,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def create_image()->Image:\n",
+    "def create_image() -> Image:\n",
     "    \"\"\"\n",
     "    Creates and displays the image with a square on a colored background.\n",
     "\n",
@@ -178,7 +178,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [],
    "source": [
